bookie with name
